monitoria/mac323/5-3-24/grades/Luís-Felipe-Melo-Costa-Silva_191451_assignsubmission_file_CoreVertices.java.txt

LOG DE COMPILAÇÃO E TESTE
Existem dois métodos de compilação, eles estão indicados, se um falha eu parto pro outro. Então se quiser entender o porque não compilou, verifique todos.
Segue também o log do corretor, pode ser interessante para descobrir a natureza de seus erros. A saída está trucada (não mostra todas as linha), se quiser ver todo o log, fale comigo

COMPILATION ERROR

CORREÇÃO AUTOMÁTICA
Quantidade de Testes | Veredito
0 | OK
0 | Tempo de Execução Excedido
0 | Resposta Errada
0 | Erro de Execução

make: '/home/bcc/victorsenam/private/usp/monitoria/mac323/4-2-35/tester/checker/checker' is up to date.
CoreVertices.java:45: error: variable declaration not allowed here
            DirectedDFS dfs = new DirectedDFS (G, possibleore);
                        ^
1 error
=========== TENTANDO COMPILAR DE NOVO (imports no começo do código) ==============
CoreVertices.java:46: error: variable declaration not allowed here
            DirectedDFS dfs = new DirectedDFS (G, possibleore);
                        ^
1 error
